# HivisionSurvillances

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videobox.cpp  videobox.h
HivisionSurvillances/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videobox.cpp  videobox.h
HivisionSurvillances/Include/: HCNetSDK.h
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-bd6294fa711f1c8175df.json  cmakeFiles-v1-92f552d663e422ce4549.json  codemodel-v2-4cb4da69b3b20576297a.json  directory-.-Debug-4a63e3524b17a81ff962.json  index-2023-10-16T06-22-24-0453.json  target-HivisionSurvillances-Debug-919f683b5b64a6cd0f13.json  target-HivisionSurvillances_autogen-Debug-093f46ade0ef8390a5ae.json  target-HivisionSurvillances_autogen_timestamp_deps-Debug-bded355a7ba519c96d46.json
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-c7e938ed858de35cb908.json  cmakeFiles-v1-93e6a0fc2bf483e093d8.json  codemodel-v2-a95da0feab16c7f9e691.json  directory-.-Debug-95f86f87028afee3278c.json  index-2023-10-16T06-20-16-0152.json  target-HivisionSurvillances-Debug-3db3ecd640a687c6db8f.json
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/.qt/: QtDeploySupport.cmake
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: HCNetSDK.h.036EE0B70FFD8DF4.idx  QAction.A531DF7C1B80EE78.idx  QFrame.CF812304306FEAC7.idx  QList.D29E0AA55B4938C3.idx  QMainWindow.433FD0F0D6B651FF.idx  QRect.CF6BE928173A522B.idx  QSize.3B6D90F1932FC6EC.idx  QSizeF.EBAB9BE86121B64C.idx  QTextCodec.C7BFA771284D2E87.idx  QTransform.8FEEAC82733B5CA3.idx  QVariant.746E5B0C04C11C44.idx  WinSock2.h.E56CB3D4B2A78042.idx  basetsd.h.3EF6DC879027404B.idx  cmath.52CE0732A38570BE.idx  combaseapi.h.AE513AD95E4F7FFE.idx  coml2api.h.B8794307DF5DF0DA.idx  commdlg.h.0579CB279173DDFC.idx  consoleapi.h.73998284695E906F.idx  consoleapi3.h.93FA20860D92EADB.idx  cstdio.2F992881FB410A63.idx  ctime.3DFA8B2835B93149.idx  dpapi.h.3B5871460D2CB410.idx  fileapi.h.EAEBD586A3D75A10.idx  imm.h.7101836111289C1A.idx  iosfwd.E98DC7910F0E8EA1.idx  joystickapi.h.E93B228E7CA63B46.idx  libloaderapi.h.B4A80C776CA544CD.idx  limits.A699D8DDF17A7DF1.idx  main.cpp.A1C02465614B635A.idx  mainwindow.cpp.68C7002981351B31.idx  mainwindow.h.26D1CE6956693FE9.idx  mciapi.h.C8E8E313BE1AFF51.idx  minwinbase.h.87817571F7C1F7A7.idx  minwindef.h.87FFA8BC2E59AB04.idx  mmeapi.h.D55743BC3BB88F0C.idx  mmiscapi.h.A3A2529911DFBB96.idx  oaidl.h.5A3D890ACE422A27.idx  objbase.h.87B3A3F9D7E1339E.idx  objidl.h.04C4559C9C93A240.idx  objidlbase.h.DD49830FB7F1FEB1.idx  (+75 more)
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/HivisionSurvillances_autogen/: deps  mocs_compilation.cpp
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/HivisionSurvillances_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_videobox.cpp  moc_videobox.cpp.d
build-HivisionSurvillances-Desktop_Qt_6_5_2_MSVC2019_64bit-Debug/HivisionSurvillances_autogen/include/: ui_mainwindow.h
